--- a/sass/style.scss
+++ b/sass/style.scss
@@ -298,7 +298,7 @@ $top: 90px;
 		}
 	}
 	.section-wrap{
-		width: 1285px;
+		width: 1270px;
 		margin: 0 auto;
 		background: url(../images/colorBg.png);
 		.section-wrap__sub{
@@ -330,7 +330,7 @@ $top: 90px;
 				.reg-form__input{
 					width: 100%;
 					margin-bottom: 10px;
-					height: 30px;
+					height: 40px;
 					border-radius: 5px;
 					border: none;
 					font-size: 13px;
@@ -340,7 +340,7 @@ $top: 90px;
 				}
 				.reg-form__button{
 					width: 100%;
-					height: 30px;
+					height: 40px;
 					margin-bottom: 20px;
 					color: white;
 					font-family: 'OpenSans Regular';
@@ -507,4 +507,53 @@ tr>th{
 
 .main-section__condtionElement{
 	margin-bottom: 40px;
+}
+
+.number__label {
+    position: relative;
+}
+
+.number__label .fa-mobile-phone, .number__label .fa-envelope-o, .number__label .fa-child, .number__label .fa-lock  {
+    color: #9e9e9e;
+    top: 2px;
+    left: 15px;
+    position: absolute;
+}
+
+.reg-form__input__promo{
+	padding-left: 5px !important;
+}
+
+.fa-mobile-phone{
+	top: -3px !important;
+	font-size: 1.5em !important;
+}
+
+.reg-form__input{
+	padding-left: 50px !important;
+}
+
+.reg-form__change{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.reg-form__change__p{
+	width: 50%;
+	color: white;
+	font-family: 'OpenSans-Regular';
+	font-size: 14px;
+}
+
+.reg-form__change__button{
+	font-family: 'OpenSans-Regular';
+	width: 50%;
+	color: white;
+	background: transparent;
+	border: none;
+	border: 1px solid white;
+	border-radius: 3px;
+	height: 40px;
 }
