--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,7 @@ table {
   background: url(../images/colorBg.png); }
   .body .section-wrap .section-wrap__sub {
     background: url(../images/imgBg.jpg) no-repeat right center;
-    background-size: 50% 100%;
-    padding-bottom: 80px; }
+    background-size: 50% 100%; }
 .body .main-section2 {
   padding-top: 60px;
   padding-bottom: 69px;
@@ -305,7 +304,8 @@ table {
       background: #ffa4aa;
       border: none;
       border-radius: 5px;
-      font-size: 14px; }
+      font-size: 14px;
+      cursor: pointer; }
 
 .main-section__planInfo {
   display: flex;
@@ -475,6 +475,7 @@ tr > th {
   border: none;
   border: 1px solid white;
   border-radius: 3px;
-  height: 40px; }
+  height: 40px;
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
