--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ table {
     .body .main-section2 .reg-form .reg-form__button {
       width: 100%;
       height: 40px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       color: white;
       font-family: 'OpenSans Regular';
       background: #ffa4aa;
@@ -498,7 +498,9 @@ tr > th {
   margin-bottom: 20px; }
 
 .reg-form__login__sc .reg-form__tw {
-  width: 48%; }
+  width: 48%;
+  border: 1px solid white;
+  border-radius: 5px; }
 
 .reg-form__login__sc .reg-form__tw i {
   font-size: 1.4em;
@@ -630,6 +632,75 @@ tr > th {
   font-family: "OpenSans-Regular";
   font-size: 14px;
   border: none;
+  cursor: pointer; }
+
+.forgot__password {
+  font-family: "OpenSans-Semibold";
+  font-size: 13px;
+  text-decoration: underline;
+  margin-bottom: 20px;
+  color: white; }
+
+.reg-form__inputpass {
+  background-image: url(../images/eye.png);
+  background-repeat: no-repeat;
+  background-position: 95% center; }
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */ }
+
+/* Modal Content */
+.modal-content {
+  border-radius: 10px !important;
+  box-sizing: border-box;
+  padding: 30px;
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+  width: 270px;
+  height: 190px;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+
+.modal-content p {
+  display: block;
+  text-align: center;
+  width: 100%;
+  font-size: 14px;
+  font-family: 'OpenSans-Regular';
+  margin-bottom: 30px; }
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold; }
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
   cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
