--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,6 +103,7 @@ $top: 90px;
 				background: #eeeeee;
 				width: 230px;
 				background-color: white;
+				height: 228px;
 				.main-section__leftInfoMenu__userName{
 					width: 230px;
 					padding-left: 15px;
@@ -114,11 +115,13 @@ $top: 90px;
 					background: $colorPurple;
 					display: flex;
 					align-items: center;
+					text-transform: uppercase;
 					.text{
 						font-family: 'OpenSans-Semibold';
 						color: white;
 						font-size: 14px;
 						vertical-align: middle;
+						line-height: 20px;
 					}
 				}
 				.main-section__leftLinkActive{
@@ -135,8 +138,8 @@ $top: 90px;
 					font-size: 14px;
 					font-family: 'OpenSans-Regular';
 					text-decoration: none;
-					padding-bottom: 15px;
-					padding-top: 15px;
+					padding-bottom: 11px;
+					padding-top: 12px;
 					color: black;
 					&:hover{
 						color: $colorPurple !important;
@@ -154,7 +157,7 @@ $top: 90px;
 				}
 			}
 			.main-section__leftInfoCode{
-				padding-top: 25px;
+				padding-top: 35px;
 				height: 175px;
 				display: block;
 				width: 230px;
@@ -197,7 +200,7 @@ $top: 90px;
 				border-radius: 5px;
 				box-shadow: 0 1px 3px rgba(0, 0, 0, 0.35);
 				display: block;
-				height: 130px;
+				height: 115px;
 				// border: 1px solid grey;
 				border-radius: 5px;
 				width: 230px;
@@ -271,11 +274,13 @@ $top: 90px;
 		background: #eeeeee;
 		position: relative;
 		bottom: 0;
+		padding-top: 30px;
 		.footer__content{
 			width: 970px;
 			margin: 0 auto;
 			height: 100%;
 			@include flex();
+			align-items: flex-start;
 			.footer__copyright{
 				font-family: 'OpenSans-Regular';
 				font-size: 12px;
@@ -406,27 +411,41 @@ progress::-webkit-progress-bar {
 }
 
 .main-section__planElement__count{
-	padding: 10px;
+	margin-left: 20px !important;
+	padding: 12px;
 	background: $colorPurple;
 	color: white;
-	border-radius: 10px;
+	border-radius: 5px;
 	margin-left: 10px;
 	font-family: 'OpenSans-Semibold';
+	margin-top: 0px;
+	margin-bottom: 0px;
+	width: 72px;
 }
 
 .main-section__planProgressBar__distribution{
 	font-family: 'OpenSans-Regular';
 	font-size: 14px;
 	margin-top: 15px;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	text-transform: uppercase;
+	span{
+		margin-left: 40px;
+		margin-top: 15px;
+		margin-right: 17px;
+	}
 }
 
 .main-section__planProgressBar{
-	margin-bottom: 60px;
+	// margin-bottom: 60px;
+}
+
+.distrnumbers span{
+	margin-top: 0px;
+	margin-bottom: 30px;
 }
 
 .main-section__right hr{
@@ -434,7 +453,7 @@ progress::-webkit-progress-bar {
 	background: $colorPurple;
 	height: 1px;
 	display: block;
-	margin-bottom: 20px;
+	// margin-bottom: 20px;
 }
 
 table {
@@ -465,7 +484,7 @@ tr>th{
 	text-align: center;
 	font-family: 'OpenSans-Regular';
 	width: 25%;
-	height: 50px;
+	height: 42px;
 	vertical-align: middle;
 	color: white;
 }
@@ -800,5 +819,15 @@ tr>th{
 .close:focus {
     color: #000;
     text-decoration: none;
+    cursor: pointer;
+}
+
+.number__label__changer{
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	display: block;
+	left: 85%;
+    top: -6px;
     cursor: pointer;
 }
